fix overflow bug

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 
@@ -128,7 +129,7 @@ a {
         margin: 5vw;
         display: grid;
         grid-template: repeat(10, 1fr) / repeat(8, 1fr);
-        width: 100vw;
+        width: 100%;
         height: 50vh;
     }
 
